CORE-5461 downgrade to jdk 8