@@ -18,10 +18,7 @@ import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
 
 import java.time.OffsetDateTime;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.*;
@@ -42,7 +39,7 @@ public class DatabaseLoadGoldenRecordTests {
     private GoldenRecordQueryResponse response = new GoldenRecordQueryResponse()
             .setResultCount(2)
             .setRecords(
-                    List.of(
+                    Arrays.asList(
                             createGoldenRecord(1),
                             createGoldenRecord(2)
                     )
@@ -77,7 +74,7 @@ public class DatabaseLoadGoldenRecordTests {
 
     @Test
     public void testLoadWithNoFilter() {
-        var query = new GoldenRecordQueryRequest();
+        GoldenRecordQueryRequest query = new GoldenRecordQueryRequest();
 
         // Actual test is below here
         when(client.queryGoldenRecords(any(), any(), any(), any(), any()))
@@ -100,7 +97,7 @@ public class DatabaseLoadGoldenRecordTests {
 
     @Test
     public void testLoadWithComprehensiveFilter() {
-        var wheres = new ArrayList<ListFilterWhere>();
+        List<ListFilterWhere> wheres = new ArrayList<>();
         wheres.add(createWhere("___filterCreatedDate", CriteriaType.GreaterThan, "2013-01-01T00:00:00.0000000+00:00"));
         wheres.add(createWhere("___filterCreatedDate", CriteriaType.LessThanOrEqual, "2019-02-28T00:00:00.0000000+00:00"));
         wheres.add(createWhere("___filterUpdatedDate", CriteriaType.GreaterThanOrEqual, "2019-02-01T00:00:00.0000000+00:00"));
@@ -116,21 +113,21 @@ public class DatabaseLoadGoldenRecordTests {
         wheres.add(createWhere("field 1", CriteriaType.NotEqual, "not equal to something"));
         wheres.add(createWhere("field 2", CriteriaType.StartsWith, "starts with"));
 
-        var listFilter = new ListFilter();
+        ListFilter listFilter = new ListFilter();
         listFilter.setComparisonType(ComparisonType.And);
         listFilter.setLimit(123);
         listFilter.setWhere(wheres);
 
         listFilter.addOrderBy(new ListFilter.OrderBy("a field ID", "ASC"));
 
-        var query = new GoldenRecordQueryRequest()
+        GoldenRecordQueryRequest query = new GoldenRecordQueryRequest()
                 .setFilter(new GoldenRecordQueryRequest.Filter()
 //                        .setCreatingSourceId("a creating source ID")
                                 .setCreatedDate(new DateFilter()
                                         .setFrom(OffsetDateTime.parse("2013-01-01T00:00Z"))
                                         .setTo(OffsetDateTime.parse("2019-02-28T00:00Z"))
                                 )
-                                .setFieldValues(List.of(
+                                .setFieldValues(Arrays.asList(
                                         new GoldenRecordQueryRequest.Filter.FieldValue()
                                                 .setFieldId("FIELD 1")
                                                 .setOperator("CONTAINS")
@@ -178,7 +175,7 @@ public class DatabaseLoadGoldenRecordTests {
                                 )
                 )
                 .setSort(new GoldenRecordQueryRequest.Sort()
-                        .setFields(List.of(
+                        .setFields(Arrays.asList(
                                 new GoldenRecordQueryRequest.Sort.Field()
                                         .setDirection("ASC")
                                         .setFieldId("a field ID")
@@ -226,7 +223,7 @@ public class DatabaseLoadGoldenRecordTests {
     }
 
     private static ListFilterWhere createWhere(String columnName, CriteriaType criteriaType, String value) {
-        var where = new ListFilterWhere();
+        ListFilterWhere where = new ListFilterWhere();
 
         where.setColumnName(columnName);
         where.setCriteriaType(criteriaType);
